Fix tab auto width on small screens

--- a/main.css
+++ b/main.css
@@ -6449,8 +6449,9 @@ img[alt="Read"] {
     display: flex;
   }
   #sidebar-container + .bottom > table[width="800"][cellspacing="0"][cellpadding="10"][border="1"][align="center"]:first-child {
-    width: auto;
+    width: 100%;
   }
+
   ul#tabs,
   #searchbox {
     min-width: auto;
